Fixed some issues related to overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,25 @@
-* { 
-  font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+html, body{
+  overflow: hidden;
 }
 
-.editor-container {
+.interface {
   display: flex;
   height: 100vh;
 }
 
-.editor-wrapper,
-.preview-container {
+.code-editor,
+.code-preview {
   flex: 1;
+  overflow: auto;
 }
 
 @media (max-width: 960px) {
-  .editor-container {
+  .interface {
     flex-direction: column;
   }
 
-  .editor-wrapper,
-  .preview-container {
+  .code-editor,
+  .code-preview {
     flex: 1;
     width: 100vw;
   }
